Part1/ex1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-log-svc
spec:
  type: ClusterIP
  selector:
    app: file-log
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
